--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <main role="main">
 
-    <div class="container">
+    <div class="container d-flex justify-content-center">
       <div class="row justify-content-center align-items-center">
         <div class="col-4 p-3">
           <h1>1920s America</h1>
