--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
               <div class="card__content">
                 <div class="card__header">
                   <img src="assets/surrealism_art.jpeg" alt="place" class="pp" />
-                  <h2>Surrelism</h2>
+                  <h2>Surrealism</h2>
                 </div>
                 <div class="card__body">
                   <p>Also stemming from WW1, Surrelism was a similar popular art style. It also was nknow for its social and political commentary. This was expressed through its suprising and unexpected compositions.</p>
